# playground

./: .editorconfig  .gitignore  AdhocFs.sln  AsterSql.sln  BoilerplateConstructorGenerator.sln  Bracky.sln  DotNetKit.Data.Entity.MemoryDatabase.sln  DotNetKit.FSharp.sln  DotNetKit.IO.FileSystem.sln  DotNetKit.StructEnumerable.sln  DotNetKit.Wpf.ProgressWindow.sln  DotNetKit.Wpf.ToastNotification.sln  FSharpKit.ErrorHandling.sln  LICENSE  LICENSE.md  MicroStream.sln  PopTranslateEnJa.py  README.md  RecordTypeAnalyzer.sln  Tuktuk.sln  VainZero.EntityClassGenerator.sln  VainZero.FileSystemWatcher.sln  VainZero.Sandbox.FSharp.sln  VainZero.Scripts.Twitter.sln  VainZero.WpfReportPrinting.sln  Zelga.sln  adhoc_fs.sln  dot_net_lab.sln  dyxi.muse.sln  dyxi.sln  file_system_dot_net.sln  fluent_sql_builder.sln  make.bat  paket.dependencies  paket.template  project_renamer.sln  publish.bat  query_builder.sln  rename_solution.bat  test.bat
2015-05-10-pop-translate-en-ja/: Default (Windows).sublime-keymap  PopTranslateEnJa.py  README.md
2015-09-08-scheme-in-48h/: README.md
2019-11-02-ide-by-wasm/projects/lsp/: Cargo.toml  dev
2019-11-02-ide-by-wasm/projects/lsp/src/: lsp.rs
2019-11-02-ide-by-wasm/projects/lsp/src/lsp/: features.rs  lsp_handler.rs  lsp_model.rs
2020-05-08-tree-sitter-rust/: .gitignore  Cargo.toml  build.rs  input.txt  test
2020-05-08-tree-sitter-rust/corpus/: additive_expr.txt  array_literal.txt  complicated.txt  let_decl_open.txt  let_decls.txt  match_bad.txt  multitive_expr.txt  suffix_expr.txt
2020-05-08-tree-sitter-rust/src/: main.rs
(+2921 files in other folders)
