[package]
name = "tree-sitter-playground"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.6"

[build-dependencies]
cc = "1"
