[package]
name = "example-lsp"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = { version = "0", default-features = false }
lazy_static = "1"
lsp-types = "0.56"
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
